[package]
name = "bevy_egui_ime"
version = "0.1.2"
edition = "2021"
authors = ["https://twitter.com/8bitTD", "8bittd@gmail.com"]
repository = "https://github.com/8bitTD/bevy_egui_ime"
keywords = ["ime", "bevy", "egui"]
license = "MIT"
readme = "README.md"
description = "This is a plugin that supports Japanese input with bevy_egui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
bevy_egui = "0.27.1"